# UR5e-2f-85

./: .gitignore  README.md
dataset_collector/dataset_collector_pkg/: package.xml  setup.cfg  setup.py
dataset_collector/dataset_collector_pkg/config/: collector_config.yaml
dataset_collector/dataset_collector_pkg/dataset_collector_pkg/: dataset_collector.py  dataset_collector_node.py  utils.py
docker/: CMakeLists.txt  README.md  URRos2  UR_Robotiq  UR_Robotiq_Teleoperation  UR_Robotiq_Zed  UR_SIM  ZedRos2  ros2Jazzy  ros2Rolling  ros_entrypoint.sh  ur_robotiq_entrypoint.sh  ur_robotiq_teleoperation_entrypoint.sh  zed-build-docker-image.sh  zed_container_entrypoint.sh
moveit_controller/moveit_controller/: package.xml  setup.cfg  setup.py
moveit_controller/moveit_controller/config/: moveit_controller_config.yaml
moveit_controller/moveit_controller/moveit_controller/: moveit_controller.py  moveit_controller_node.py
moveit_controller/moveit_controller_srvs/: CMakeLists.txt  package.xml
moveit_controller/moveit_controller_srvs/srv/: GoHome.srv
ur5e_2f_85/: real_robot_calibration.yaml  ur5e_2f_85_rviz.rviz
ur5e_2f_85/ur5e_2f_85_description/: CMakeLists.txt  package.xml
ur5e_2f_85/ur5e_2f_85_description/config/: ur5e_2f_85_controllers.yaml
ur5e_2f_85/ur5e_2f_85_description/launch/: moveit_setup_assistant.launch.py  ur5e_2f_85_display.launch.py  ur5e_2f_85_display_control.launch.py
ur5e_2f_85/ur5e_2f_85_description/rviz/: custom_display.rviz
ur5e_2f_85/ur5e_2f_85_description/urdf/: robot_platform_macro.xacro  test.urdf  ur5e_2f_85.urdf.xacro  ur5e_2f_85_macro.xacro  ur5e_2f_85_platform.urdf  ur5e_2f_85_platform.urdf.xacro  ur5e_2f_85_platform_control.urdf.xacro  zed_mini_camera_macro.xacro
ur5e_2f_85/ur5e_2f_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_2f_85/ur5e_2f_85_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5e_2f_85.ros2_control.xacro  ur5e_2f_85.srdf  ur5e_2f_85.urdf.xacro  ur_servo.yaml
ur5e_2f_85/ur5e_2f_85_moveit_config/launch/: move_group_servo.launch.py
ur5e_2f_85/ur5e_2f_85_teleoperation/: package.xml  setup.cfg  setup.py
ur5e_2f_85/ur5e_2f_85_teleoperation/config/: tele_node_config.yaml
ur5e_2f_85/ur5e_2f_85_teleoperation/launch/: ur5e_teleoperation.launch.py
ur5e_2f_85/ur5e_2f_85_teleoperation/ur5e_2f_85_teleoperation/: teleoperation.py  teleoperator_node.py  utils.py
ur5e_2f_85/ur5e_2f_85_teleoperation_msg/: CMakeLists.txt  package.xml
ur_programs/: connect_sim_robot.old1  connect_sim_robot.script  connect_sim_robot.txt  connect_sim_robot.urp  default.installation  default.variables
zed_camera/: hello_zed.py
zed_camera/zed_camera_calibration/: CMakeLists.txt  estimated_camera_positions.yaml  package.xml  zed_camera_calibration.rviz
zed_camera/zed_camera_calibration/config/: aruco_frontal_camera.yaml  camera_config.yaml  multi_cameras.yaml
zed_camera/zed_camera_calibration/launch/: zed_camera_calibration.launch.py  zed_multi_camera_calibration.launch.py
zed_camera/zed_camera_calibration/scripts/: interactive_aruco_calibration.py
zed_camera/zed_camera_driver/: camera_visualization_rviz.rviz  package.xml  setup.cfg  setup.py
(+4 files in other folders)
