<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_2f_85_teleoperation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ur5e_2f_85_teleoperation_msg</build_depend>
  <build_depend>sensor_msgs</build_depend>



  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ur5e_2f_85_teleoperation_msg</exec_depend>
  <exec_depend>ur5e_2f_85_teleoperation_msg</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
